--- a/docs/antora/modules/ROOT/pages/Configuring_Mill.adoc
+++ b/docs/antora/modules/ROOT/pages/Configuring_Mill.adoc
@@ -617,14 +617,14 @@ download from arbitrary URLs. Note that targets like `unmanagedClasspath` are
 cached, so your jar is downloaded only once and re-used indefinitely after that.
 
 
-== Using the Ammonite Repl
+== Using the Ammonite Repl / Scala console
 
 All ``ScalaModule``s have a `console` and a `repl` target, to start a Scala console or an Ammonite Repl.
 
 To use the latter, you can (and sometimes need to) customize the Ammonite version to work with your selected Scala version.
 The default Ammonite version is the one, which is used by Mill internally (Mill's `build.sc` is an Ammonite script, after all).
 But depending on the Scala version you are using, there is no matching Ammonite release available.
-In order to start the repl, you have to  specify a different available Ammonite version.
+In order to start the repl, you have to specify a different available Ammonite version.
 
 .Example: Overriding `ammoniteVersion` to select a release compatible to the `scalaVersion`
 [source,scala]
@@ -639,10 +639,10 @@ object foo extends ScalaModule {
 
 [TIP]
 --
-_Why is the Ammonite tied to the exact Scala version?_
+_Why is Ammonite tied to the exact Scala version?_
 
 This is because Ammonite depends on the Scala compiler.
-In contract to the Scala library, compiler releases do not guarantee any binary compatibility between releases.
+In contrast to the Scala library, compiler releases do not guarantee any binary compatibility between releases.
 As a consequence, Ammonite needs full Scala version specific releases.
 
 The older your used Mill version or the newer the Scala version you want to use, the higher is the risk that the default Ammonite version will not match.
