--- a/docs/antora/modules/ROOT/pages/Configuring_Mill.adoc
+++ b/docs/antora/modules/ROOT/pages/Configuring_Mill.adoc
@@ -623,7 +623,7 @@ All ``ScalaModule``s have a `console` and a `repl` target, to start a Scala cons
 
 To use the latter, you can (and sometimes need to) customize the Ammonite version to work with your selected Scala version.
 The default Ammonite version is the one, which is used by Mill internally (Mill's `build.sc` is an Ammonite script, after all).
-But depending on the Scala version you are using, there is no matching Ammonite release available.
+But depending on the Scala version you are using, there is probably no matching Ammonite release available.
 In order to start the repl, you have to specify a different available Ammonite version.
 
 .Example: Overriding `ammoniteVersion` to select a release compatible to the `scalaVersion`
