--- a/docs/antora/modules/ROOT/pages/Intro_to_Mill.adoc
+++ b/docs/antora/modules/ROOT/pages/Intro_to_Mill.adoc
@@ -798,18 +798,52 @@ mill mill.scalalib.Dependency/showUpdates --allowPreRelease true # also show pre
 
 == IDE Support
 
-Mill supports any IDE that is compatible with https://build-server-protocol.github.io/[BSP], such as IntelliJ. +
-Use `mill mill.bsp.BSP/install` to generate the BSP project config for your build.
+To support various IDEs and Language Servers, Mill supports the Build Server Protocol and has a <<Build Server Protocol (BSP),built-in BSP server>>.
 
-It also enables Intellij to provide navigation and code-completion features within your build file itself.
+In addition to BSP, Mill also supports <<IntelliJ Support,IntelliJ IDEA project configuration generation>> directly.
 
-== IntelliJ Support (legacy)
+=== Build Server Protocol (BSP)
 
-Mill supports IntelliJ configuration generation.
-Use `mill mill.scalalib.GenIdea/idea` to generate an IntelliJ project
-config for your build.
+To install a BSP connection file `.bsp/mill-bsp.json`, run:
 
-This also configures IntelliJ to allow easy navigate &amp; code-completion within your build file itself.
+[source,bash]
+----
+mill mill.bsp.BSP/install
+----
+
+Working known clients of the BSP server are IntelliJ IDEA and Metals.
+
+[NOTE]
+--
+If you want to us Metals, you may also want to enable SemanticDB support. Without it, some functionality like find references may not work.
+
+We still work on a better and automatic SemanticDB support.
+Until we have completed it, you can enable SemanticDB manually in your ``ScalaModule``.
+
+For convenience, you can mix-in the `mill.scalalib.bsp.ScalaMetalsSupport` trait. This enables SemanticDB and also adapts the scalac options to produce more helpful messages in Metals.
+
+.`build.sc`: Mix-in of `ScalaMetalsSupport` trait
+[source,scala]
+----
+import mill._
+import mill.scalalib._
+import mill.scalalib.bsp.ScalaMetalsSupport
+
+object foo extends ScalaModule with ScalaMetalsSupport {
+  def scalaVersion = ???
+  def semanticDbVersion = ???
+}
+----
+--
+
+== IntelliJ Support
+
+To generate IntelliJ IDEA project files into `.idea/`, run:
+
+[source,bash]
+----
+mill mill.scalalib.GenIdea/idea
+----
 
 == The Build REPL
 
