--- a/docs/antora/modules/ROOT/pages/Extending_Mill.adoc
+++ b/docs/antora/modules/ROOT/pages/Extending_Mill.adoc
@@ -199,7 +199,7 @@ This is typical required for Mill contrib modules, which are developed in the Mi
 
 .Example: Use `mill-contrib-bloop` plugin matching the current Mill version
 ----
-import $ivy:`com.lihaoyi:mill-contrib-bloop:$MILL_VERSION`
+import $ivy.`com.lihaoyi:mill-contrib-bloop:$MILL_VERSION`
 ----
 
 There is the even more convenient option to leave the version completely empty.
@@ -208,7 +208,7 @@ But don't forget to provide the trailing colon!
 
 .Example: Use `mill-contrib-bloop` plugin matching the current Mill version
 ----
-import $ivy:`com.lihaoyi:mill-contrib-bloop:`
+import $ivy.`com.lihaoyi:mill-contrib-bloop:`
 ----
 --
 
@@ -219,7 +219,7 @@ to substitute the currently used Mill binary platform.
 
 .Example: Using `mill-vcs-version` plugin matching the current Mill Binary Platfrom
 ----
-import $ivy:`de.tototec::de.tobiasroeser.mill.vcs.version_mill$MILL_BIN_PLATFORM:0.1.2`
+import $ivy.`de.tototec::de.tobiasroeser.mill.vcs.version_mill$MILL_BIN_PLATFORM:0.1.2`
 ----
 --
 
