--- a/docs/antora/modules/ROOT/pages/Cross_Builds.adoc
+++ b/docs/antora/modules/ROOT/pages/Cross_Builds.adoc
@@ -29,7 +29,9 @@ mill show foo[2.12].suffix
 mill show foo[2.12].bigSuffix
 ----
 
-If you were a `zsh` user, the command should be a little complex.
+[NOTE]
+--
+Please be aware that some shells like `zsh` interpret square brackets differently, so quoting or masking might be needed.
 
 [source,zsh]
 ----
@@ -37,7 +39,7 @@ mill show foo\[2.10\].suffix
 mill show 'foo[2.10].suffix'
 mill show "foo[2.10].suffix"
 ----
-
+--
 The modules each also have a `millSourcePath` of
 
 [source,text]
